--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -1,7 +1,8 @@
-{
+*{
     margin: 0;
     padding: 0;
-    box-sizzing: border-box;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 body{
     background-color: black;
@@ -11,4 +12,78 @@ body{
 .interface{
     max-width: 1280px;
     margin: 0 auto;
+}
+
+.flex{
+    display: flex;
+}
+.contato button{
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: cornflowerblue;
+    border: 0;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: .2s;
+    }
+/* CABEÇALHO STYLE */
+header{
+    padding: 40px 4%;
+}
+
+header > .interface{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header a{
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    transition: .2s;
+}
+header a:hover{
+    color:white ;
+    transform: scale(1.09);
+}
+
+header nav ul{
+    list-style-type: none;
+}
+
+header nav ul li{
+    display: inline-block;
+    padding: 0 40px;
+}
+
+.contato button:hover{
+    box-shadow: 0px 0px 8px #90b1ec;
+    transform: scale(1.09);
+
+}
+/* ESTILO DO TOPO DO SITE */
+section.topo-do-site{
+    padding: 40px 4%;
+}
+
+section.topo-do-site .flex{
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+}
+
+.topo-do-site h1{
+    color:white;
+    font-size: 42px;
+    line-height: 40px;
+
+}
+.topo-do-site .txt-topo-do-site h1 span{
+    color: Cornflowerblue;
+}
+.topo-do-site .txt-topo-do-site p{
+    font:white;
+    margin: 40px 0;
 }
